plugins {
	id 'org.springframework.boot' version '3.5.4' apply false
	id 'io.spring.dependency-management' version '1.1.7' apply false
	id 'java'
}

group = 'com.sleekydz86'
version = '0.0.1-SNAPSHOT'

repositories {
	mavenCentral()
}

subprojects {
	apply plugin: 'java'
	apply plugin: 'org.springframework.boot'
	apply plugin: 'io.spring.dependency-management'
	apply plugin: 'java-test-fixtures'

	java {
		sourceCompatibility = JavaVersion.VERSION_21
		targetCompatibility = JavaVersion.VERSION_21
	}

	repositories {
		mavenCentral()
	}

	configurations.all {
		resolutionStrategy {
			force(
					'io.projectreactor.netty:reactor-netty:1.1.15',
					'io.projectreactor.netty:reactor-netty-core:1.1.15',
					'io.projectreactor.netty:reactor-netty-http:1.1.15'
			)
			cacheChangingModulesFor 0, 'seconds'
			cacheDynamicVersionsFor 0, 'seconds'
		}
	}

	dependencyManagement {
		imports {
			mavenBom 'org.springframework.boot:spring-boot-dependencies:3.5.4'
			mavenBom 'io.projectreactor:reactor-bom:2023.0.8'
		}
		dependencies {
			dependency 'io.projectreactor.netty:reactor-netty:1.1.15'
			dependency 'io.projectreactor.netty:reactor-netty-core:1.1.15'
			dependency 'io.projectreactor.netty:reactor-netty-http:1.1.15'
			dependency 'io.lettuce:lettuce-core:6.6.0.RELEASE'
		}
	}

	dependencies {

		implementation 'org.springframework.boot:spring-boot-starter-web'
		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

		testImplementation 'org.springframework.boot:spring-boot-starter-test'
		testImplementation 'org.junit.jupiter:junit-jupiter-api'
		testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
		testImplementation "org.mockito:mockito-core:5.8.0"
		testImplementation "org.mockito:mockito-junit-jupiter:5.8.0"
		testImplementation 'org.springframework:spring-test'

		implementation "com.bucket4j:bucket4j_jdk17-core:8.15.0"
		implementation "com.bucket4j:bucket4j_jdk17-lettuce:8.15.0"
		implementation "com.bucket4j:bucket4j_jdk17-redis:8.15.0"
		implementation "com.bucket4j:bucket4j-redis:8.15.0"
		implementation "io.lettuce:lettuce-core:6.6.0.RELEASE"
		implementation 'javax.xml.bind:jaxb-api:2.3.1'
		implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.6'

		implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
		implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'

		implementation 'ai.djl:api:0.24.0'
		implementation 'ai.djl.huggingface:tokenizers:0.24.0'
		implementation 'ai.djl.pytorch:pytorch-engine:0.24.0'
		implementation 'ai.djl.pytorch:pytorch-jni:0.24.0'
		implementation 'ai.djl.pytorch:pytorch-native-cpu:0.24.0'

		implementation 'ai.djl.onnxruntime:onnxruntime-engine:0.24.0'
		implementation 'ai.djl.tensorflow:tensorflow-engine:0.24.0'
	}

	tasks.withType(Test) {
		useJUnitPlatform()
	}
}